09-21-20: Use the export locally to pull functions from one file into another (#1)
* Playing with Node

* Update package.json dependencies

* HOmework from 9.9.21

* Export method across files

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/matt-ian-thomas/node-react#readme",
   "dependencies": {
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "visualforce-remote-actions": "1.1.3"
   }
 }
